--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <ul class="menu_list"></ul>
     <ul class="pagination">
         <li id="prev"><</li>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
+        <li class="page-list first">1</li>
+        <li class="page-list second">2</li>
+        <li class="page-list third">3</li>
         <li id="next">></li>
     </ul>
     <script tyle="text/javascript" src="index.js" charset="UTF-8"></script>
