--- a/test3/test3.html
+++ b/test3/test3.html
@@ -9,8 +9,8 @@
 <body>
   <div class="pagination">
     <table class="tableList" id="listingTable">
-      <!-- <thead></thead>
-      <tbody id="tbodyID"></tbody> -->
+      <thead id="theadID"></thead>
+      <tbody id="tbodyID"></tbody>
     </table>
     <div class="pagination-block">
       <span class="pageButton outline-none" id="button_prev">Prev</span>
