--- a/test3/test3.html
+++ b/test3/test3.html
@@ -13,9 +13,11 @@
       <tbody id="tbodyID"></tbody>
     </table>
     <div class="pagination-block">
+      <span class="pageButton outline-none" id="button_first">First</span>
       <span class="pageButton outline-none" id="button_prev">Prev</span>
       <span id="page_number" class="outline-none"></span>
       <span class="pageButton outline-none" id="button_next">Next</span>
+      <span class="pageButton outline-none" id="button_last">Last</span>
     </div>
   </div>
   <script src="test3.js"></script>
