added show records number function

--- a/test3/test3.html
+++ b/test3/test3.html
@@ -19,6 +19,7 @@
       <span class="pageButton outline-none" id="button_next">Next</span>
       <span class="pageButton outline-none" id="button_last">Last</span>
     </div>
+    <div id="showing_records_number"></div>
   </div>
   <script src="test3.js"></script>
 </body>
