--- a/test3/test3.html
+++ b/test3/test3.html
@@ -7,19 +7,32 @@
   <link rel="stylesheet" href="test3.css">
 </head>
 <body>
+
+  
   <div class="pagination">
-    <table class="tableList" id="listingTable">
-      <thead id="theadID"></thead>
-      <tbody id="tbodyID"></tbody>
-    </table>
-    <div class="pagination-block">
-      <span class="pageButton outline-none" id="button_first">First</span>
-      <span class="pageButton outline-none" id="button_prev">Prev</span>
-      <span id="page_number" class="outline-none"></span>
-      <span class="pageButton outline-none" id="button_next">Next</span>
-      <span class="pageButton outline-none" id="button_last">Last</span>
+    <div class="information">
+      <form class="search-form" action="#">
+        <input class="search-box" type="text" placeholder="Serch for keywords...">
+        <button class="search-btn" type="submit">
+          <img src="./assets/white-search1.svg" alt="search">
+        </button>
+      </form>
+      <a class="dl-btn" href="#" download="#"><img src="./assets/grey-download1.svg" alt=""></a>
     </div>
-    <div id="showing_records_number"></div>
+    <div class="table-block">
+      <table class="tableList" id="listingTable">
+        <thead id="theadID"></thead>
+        <tbody id="tbodyID"></tbody>
+      </table>
+    </div>
+    <div class="pagination-block">
+      <span class="pageButton outline-none" id="button_first">&lt;&lt;</span>
+      <span class="pageButton outline-none" id="button_prev">&lt;</span>
+      <span id="page_number" class="outline-none"></span>
+      <span class="pageButton outline-none" id="button_next">&gt;</span>
+      <span class="pageButton outline-none" id="button_last">&gt;&gt;</span>
+      <div id="showing_records_number"></div>
+    </div>
   </div>
   <script src="test3.js"></script>
 </body>
